--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,41 +1,21 @@
-version: '3.5'
-
+version: '3.8'
 services:
-  postgres:
-    container_name: postgres_container
-    image: postgres
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-changeme}
-      PGDATA: /data/postgres
-    volumes:
-       - postgres:/data/postgres
+  postgres_db:
+    image:  postgres
+    container_name: postgres
     ports:
-      - "5432:5432"
-    networks:
-      - postgres
-    restart: unless-stopped
-  
-  pgadmin:
-    container_name: pgadmin_container
-    image: dpage/pgadmin4
-    environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
-      PGADMIN_CONFIG_SERVER_MODE: 'False'
+      - 5432:5432
     volumes:
-       - pgadmin:/var/lib/pgadmin
-
-    ports:
-      - "${PGADMIN_PORT:-5050}:80"
-    networks:
-      - postgres
+      - ./postgres-data:/var/lib/postgresql/data
+#      - ./db/migrations/postgres.session.sql:/docker-entrypoint-initdb.d/create_tables.sql
+    environment:
+      LANGUAGE: ru_RU.UTF-8
+      POSTGRES_USER:  "root"
+      POSTGRES_PASSWORD:  "root"
+      POSTGRES_DB: "api-hydroposts"
     restart: unless-stopped
-
-networks:
-  postgres:
-    driver: bridge
-
-volumes:
-    postgres:
-    pgadmin:
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: '1G'
