--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [DATABASE]
 DatabaseType = postgres
-Hostname = localhost
+Hostname = postgres_db
 Port = 5432
 DatabaseName = api-hydroposts
 Username = root
