--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,5 +36,14 @@ services:
       interval: 30s
       timeout: 20s
       retries: 3
+
+  dataserver:
+    build: .
+    depends_on:
+      - "postgres_db"
+      - "minio"
+    ports:
+      - "8000:8000"
+
 volumes:
   minio-storage:
